fixed #26304: body overflow-behaviour

--- a/templates/default/delos.less
+++ b/templates/default/delos.less
@@ -363,6 +363,7 @@ span.ilAlert {
 
 html, body {
 	height:100%;
+	overflow: hidden;
 }
 html {
 	@media only screen and (max-width: @grid-float-breakpoint-max) {
